// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /seasons smoke tests /seasons 1`] = `
[
  {
    "season": "1950",
    "url": "http://en.wikipedia.org/wiki/1950_Formula_One_season",
  },
  {
    "season": "1951",
    "url": "http://en.wikipedia.org/wiki/1951_Formula_One_season",
  },
  {
    "season": "1952",
    "url": "http://en.wikipedia.org/wiki/1952_Formula_One_season",
  },
  {
    "season": "1953",
    "url": "http://en.wikipedia.org/wiki/1953_Formula_One_season",
  },
  {
    "season": "1954",
    "url": "http://en.wikipedia.org/wiki/1954_Formula_One_season",
  },
  {
    "season": "1955",
    "url": "http://en.wikipedia.org/wiki/1955_Formula_One_season",
  },
  {
    "season": "1956",
    "url": "http://en.wikipedia.org/wiki/1956_Formula_One_season",
  },
  {
    "season": "1957",
    "url": "http://en.wikipedia.org/wiki/1957_Formula_One_season",
  },
  {
    "season": "1958",
    "url": "http://en.wikipedia.org/wiki/1958_Formula_One_season",
  },
  {
    "season": "1959",
    "url": "http://en.wikipedia.org/wiki/1959_Formula_One_season",
  },
  {
    "season": "1960",
    "url": "http://en.wikipedia.org/wiki/1960_Formula_One_season",
  },
  {
    "season": "1961",
    "url": "http://en.wikipedia.org/wiki/1961_Formula_One_season",
  },
  {
    "season": "1962",
    "url": "http://en.wikipedia.org/wiki/1962_Formula_One_season",
  },
  {
    "season": "1963",
    "url": "http://en.wikipedia.org/wiki/1963_Formula_One_season",
  },
  {
    "season": "1964",
    "url": "http://en.wikipedia.org/wiki/1964_Formula_One_season",
  },
  {
    "season": "1965",
    "url": "http://en.wikipedia.org/wiki/1965_Formula_One_season",
  },
  {
    "season": "1966",
    "url": "http://en.wikipedia.org/wiki/1966_Formula_One_season",
  },
  {
    "season": "1967",
    "url": "http://en.wikipedia.org/wiki/1967_Formula_One_season",
  },
  {
    "season": "1968",
    "url": "http://en.wikipedia.org/wiki/1968_Formula_One_season",
  },
  {
    "season": "1969",
    "url": "http://en.wikipedia.org/wiki/1969_Formula_One_season",
  },
  {
    "season": "1970",
    "url": "http://en.wikipedia.org/wiki/1970_Formula_One_season",
  },
  {
    "season": "1971",
    "url": "http://en.wikipedia.org/wiki/1971_Formula_One_season",
  },
  {
    "season": "1972",
    "url": "http://en.wikipedia.org/wiki/1972_Formula_One_season",
  },
  {
    "season": "1973",
    "url": "http://en.wikipedia.org/wiki/1973_Formula_One_season",
  },
  {
    "season": "1974",
    "url": "http://en.wikipedia.org/wiki/1974_Formula_One_season",
  },
  {
    "season": "1975",
    "url": "http://en.wikipedia.org/wiki/1975_Formula_One_season",
  },
  {
    "season": "1976",
    "url": "http://en.wikipedia.org/wiki/1976_Formula_One_season",
  },
  {
    "season": "1977",
    "url": "http://en.wikipedia.org/wiki/1977_Formula_One_season",
  },
  {
    "season": "1978",
    "url": "http://en.wikipedia.org/wiki/1978_Formula_One_season",
  },
  {
    "season": "1979",
    "url": "http://en.wikipedia.org/wiki/1979_Formula_One_season",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?constructorId=ferrari&driverStandings=5 1`] = `
[
  {
    "season": "1958",
    "url": "http://en.wikipedia.org/wiki/1958_Formula_One_season",
  },
  {
    "season": "1959",
    "url": "http://en.wikipedia.org/wiki/1959_Formula_One_season",
  },
  {
    "season": "1960",
    "url": "http://en.wikipedia.org/wiki/1960_Formula_One_season",
  },
  {
    "season": "1961",
    "url": "http://en.wikipedia.org/wiki/1961_Formula_One_season",
  },
  {
    "season": "1962",
    "url": "http://en.wikipedia.org/wiki/1962_Formula_One_season",
  },
  {
    "season": "1963",
    "url": "http://en.wikipedia.org/wiki/1963_Formula_One_season",
  },
  {
    "season": "1964",
    "url": "http://en.wikipedia.org/wiki/1964_Formula_One_season",
  },
  {
    "season": "1965",
    "url": "http://en.wikipedia.org/wiki/1965_Formula_One_season",
  },
  {
    "season": "1966",
    "url": "http://en.wikipedia.org/wiki/1966_Formula_One_season",
  },
  {
    "season": "1967",
    "url": "http://en.wikipedia.org/wiki/1967_Formula_One_season",
  },
  {
    "season": "1968",
    "url": "http://en.wikipedia.org/wiki/1968_Formula_One_season",
  },
  {
    "season": "1969",
    "url": "http://en.wikipedia.org/wiki/1969_Formula_One_season",
  },
  {
    "season": "1970",
    "url": "http://en.wikipedia.org/wiki/1970_Formula_One_season",
  },
  {
    "season": "1971",
    "url": "http://en.wikipedia.org/wiki/1971_Formula_One_season",
  },
  {
    "season": "1972",
    "url": "http://en.wikipedia.org/wiki/1972_Formula_One_season",
  },
  {
    "season": "1973",
    "url": "http://en.wikipedia.org/wiki/1973_Formula_One_season",
  },
  {
    "season": "1974",
    "url": "http://en.wikipedia.org/wiki/1974_Formula_One_season",
  },
  {
    "season": "1975",
    "url": "http://en.wikipedia.org/wiki/1975_Formula_One_season",
  },
  {
    "season": "1976",
    "url": "http://en.wikipedia.org/wiki/1976_Formula_One_season",
  },
  {
    "season": "1977",
    "url": "http://en.wikipedia.org/wiki/1977_Formula_One_season",
  },
  {
    "season": "1978",
    "url": "http://en.wikipedia.org/wiki/1978_Formula_One_season",
  },
  {
    "season": "1979",
    "url": "http://en.wikipedia.org/wiki/1979_Formula_One_season",
  },
  {
    "season": "1980",
    "url": "http://en.wikipedia.org/wiki/1980_Formula_One_season",
  },
  {
    "season": "1981",
    "url": "http://en.wikipedia.org/wiki/1981_Formula_One_season",
  },
  {
    "season": "1982",
    "url": "http://en.wikipedia.org/wiki/1982_Formula_One_season",
  },
  {
    "season": "1983",
    "url": "http://en.wikipedia.org/wiki/1983_Formula_One_season",
  },
  {
    "season": "1984",
    "url": "http://en.wikipedia.org/wiki/1984_Formula_One_season",
  },
  {
    "season": "1985",
    "url": "http://en.wikipedia.org/wiki/1985_Formula_One_season",
  },
  {
    "season": "1986",
    "url": "http://en.wikipedia.org/wiki/1986_Formula_One_season",
  },
  {
    "season": "1987",
    "url": "http://en.wikipedia.org/wiki/1987_Formula_One_season",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=alonso&constructorId=minardi 1`] = `
[
  {
    "season": "2001",
    "url": "http://en.wikipedia.org/wiki/2001_Formula_One_season",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=bottas 1`] = `
[
  {
    "season": "2013",
    "url": "http://en.wikipedia.org/wiki/2013_Formula_One_season",
  },
  {
    "season": "2014",
    "url": "http://en.wikipedia.org/wiki/2014_Formula_One_season",
  },
  {
    "season": "2015",
    "url": "http://en.wikipedia.org/wiki/2015_Formula_One_season",
  },
  {
    "season": "2016",
    "url": "http://en.wikipedia.org/wiki/2016_Formula_One_season",
  },
  {
    "season": "2017",
    "url": "http://en.wikipedia.org/wiki/2017_Formula_One_season",
  },
  {
    "season": "2018",
    "url": "http://en.wikipedia.org/wiki/2018_Formula_One_World_Championship",
  },
  {
    "season": "2019",
    "url": "http://en.wikipedia.org/wiki/2019_Formula_One_World_Championship",
  },
  {
    "season": "2020",
    "url": "http://en.wikipedia.org/wiki/2020_Formula_One_World_Championship",
  },
  {
    "season": "2021",
    "url": "http://en.wikipedia.org/wiki/2021_Formula_One_World_Championship",
  },
  {
    "season": "2022",
    "url": "http://en.wikipedia.org/wiki/2022_Formula_One_World_Championship",
  },
  {
    "season": "2023",
    "url": "https://en.wikipedia.org/wiki/2023_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=hamilton&constructorId=mercedes&circuitId=imola 1`] = `
[
  {
    "season": "2020",
    "url": "http://en.wikipedia.org/wiki/2020_Formula_One_World_Championship",
  },
  {
    "season": "2021",
    "url": "http://en.wikipedia.org/wiki/2021_Formula_One_World_Championship",
  },
  {
    "season": "2022",
    "url": "http://en.wikipedia.org/wiki/2022_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=maldonado&status=4 1`] = `
[
  {
    "season": "2012",
    "url": "http://en.wikipedia.org/wiki/2012_Formula_One_season",
  },
  {
    "season": "2013",
    "url": "http://en.wikipedia.org/wiki/2013_Formula_One_season",
  },
  {
    "season": "2015",
    "url": "http://en.wikipedia.org/wiki/2015_Formula_One_season",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=max_verstappen&grid=1 1`] = `
[
  {
    "season": "2019",
    "url": "http://en.wikipedia.org/wiki/2019_Formula_One_World_Championship",
  },
  {
    "season": "2020",
    "url": "http://en.wikipedia.org/wiki/2020_Formula_One_World_Championship",
  },
  {
    "season": "2021",
    "url": "http://en.wikipedia.org/wiki/2021_Formula_One_World_Championship",
  },
  {
    "season": "2022",
    "url": "http://en.wikipedia.org/wiki/2022_Formula_One_World_Championship",
  },
  {
    "season": "2023",
    "url": "https://en.wikipedia.org/wiki/2023_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=sainz&driverStandings=5 1`] = `
[
  {
    "season": "2021",
    "url": "http://en.wikipedia.org/wiki/2021_Formula_One_World_Championship",
  },
  {
    "season": "2022",
    "url": "http://en.wikipedia.org/wiki/2022_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=sainz&fastest=1 1`] = `
[
  {
    "season": "2020",
    "url": "http://en.wikipedia.org/wiki/2020_Formula_One_World_Championship",
  },
  {
    "season": "2022",
    "url": "http://en.wikipedia.org/wiki/2022_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons smoke tests /seasons?driverId=vettel&constructorId=ferrari&result=1 1`] = `
[
  {
    "season": "2015",
    "url": "http://en.wikipedia.org/wiki/2015_Formula_One_season",
  },
  {
    "season": "2017",
    "url": "http://en.wikipedia.org/wiki/2017_Formula_One_season",
  },
  {
    "season": "2018",
    "url": "http://en.wikipedia.org/wiki/2018_Formula_One_World_Championship",
  },
  {
    "season": "2019",
    "url": "http://en.wikipedia.org/wiki/2019_Formula_One_World_Championship",
  },
]
`;

exports[`GET /seasons/\${seasonId} smoke tests /seasons/1994 1`] = `
{
  "season": "1994",
  "url": "http://en.wikipedia.org/wiki/1994_Formula_One_season",
}
`;
